# relaxng-rust

./: Cargo.toml
relaxng-dump/: Cargo.toml
relaxng-dump/src/: lib.rs  main.rs
relaxng-gen/: .rustfmt.toml  Cargo.toml  README.md  askama.toml  test-choice.rng  test.rng
relaxng-gen/schemas/: basictypes.toml  capability.toml  cpu.toml  cputypes.toml  domainbackup.toml  domaincaps.toml  domaincommon.toml  network.toml  storagecommon.toml
relaxng-gen/src/: error.rs  main.rs  rustgen.rs  utils.rs  xpath.rs
relaxng-gen/src/rustgen/: config.rs  datatypes.rs  genenum.rs  genfield.rs  genmod.rs  genstruct.rs  gentest.rs  gentree.rs  state.rs
relaxng-gen/templates/: Cargo.toml
relaxng-gen/tests/: build.rs  generate.rs  generate_and_run.rs
relaxng-gen/tests/fixtures/: attr-push.rng  attr-solo.rnc  attr-solo.xml  backupdisktype.rng  backupdisktype.xml  collapse_with_parent.rng  collapse_with_parent.toml  collapse_with_parent.xml  confict-variant.rng  controller.rng  controller.toml  controller.xml  disk-mirror.rng  doc-propagate.rng  doc-propagate.toml  doc-test-override.rng  doc-test-override.toml  dom-cpu.rng  dom-cpu.toml  domain.rng  domain.xml  empty-in-choice.rng  empty-variant.rng  features.rng  features.toml  field-conflict.rnc  inline.rnc  input-bus.rng  integer-facets.rng  metadata.rng  metadata.xml  opt-attr.rng  option-wrap.rng  os.rng  os.toml  os.xml  parent_is_this.rng  parent_is_this.toml  parent_is_this.xml  recurse-inline.rnc  (+41 more)
relaxng-gen/tests/snapshots/: build__test-attr-push.snap  build__test-attr-solo.snap  build__test-backupdisktype.snap  build__test-collapse_with_parent.snap  build__test-controller.snap  build__test-disk-mirror.snap  build__test-doc-propagate.snap  build__test-doc-test-override.snap  build__test-dom-cpu.snap  build__test-domain.snap  build__test-empty-in-choice.snap  build__test-empty-variant.snap  build__test-field-conflict.snap  build__test-input-bus.snap  build__test-integer-facets.snap  build__test-metadata.snap  build__test-opt-attr.snap  build__test-option-wrap.snap  build__test-os.snap  build__test-recurse-inline.snap  build__test-ref-choice.snap  build__test-seclabel.snap  build__test-simple.snap  build__test-ssp.snap  build__test-string.snap  build__test-tuto1.snap  build__test-tuto15.snap  build__test-tuto1c.snap  build__test-tuto1d.snap  build__test-tuto2.snap  build__test-tuto3.snap  build__test-tuto3b.snap  build__test-tuto3c.snap  build__test-tuto3d.snap  build__test-tuto4.snap  build__test-tuto4b.snap  build__test-tuto4c.snap  build__test-tuto4d.snap  build__test-tuto5.snap  build__test-tuto5b.snap  (+47 more)
relaxng-gen/tests/todo/: tuto13-3b.rnc
relaxng-tool/: Cargo.toml
relaxng-tool/src/: main.rs  rustgen.rs
relaxng-tool/src/rustgen/: genenum.rs  genfield.rs  genstruct.rs
relaxng-tool/tests/: generate.rs
relaxng-tool/tests/fixtures/: tuto3.xml
relaxng-tool/tests/snapshots/: generate__tuto1.snap  generate__tuto1b.snap
(+37 files in other folders)
