[package]
name = "relaxng-gen"
version = "0.1.0"
authors = ["Marc-André Lureau <marcandre.lureau@gmail.com>"]
edition = "2024"

[features]
integration-tests = []

[dependencies]
structopt = "0.3.21"
structopt-derive = "0.4.14"
relaxng-model = { path = "../relaxng-model" }
heck = "0.5"
quote = "1.0.40"
prettyplease = "0.2.32"
syn = { version = "2.0.100", features = ["extra-traits"] }
proc-macro2 = "1.0.94"
check_keyword = "0.4.1"
pluralizer = "0.5.0"
indexmap = "2.9.0"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
nom = "8.0.0"
pretty_assertions = "1.4.1"
askama = "0.15.0"
#chrono = "0.4"
#rust_decimal = "1.35"
#url = "2.5"
#num-bigint = "0.4"

[[bin]]
name = "relaxng-gen"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
datatest-stable = "0.3"
glob = "0.3.2"
insta = "1.42.2"
tempfile = "3.19"
test-log = { version = "0.2.17", features = ["trace"] }

[[test]]
name = "generate_and_run"
harness = false
required-features = ["integration-tests"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
